@@ -25,8 +25,8 @@ dependencies {
     compile group: 'ch.ehi', name: 'ehibasics', version: '1.4.1'
     compile group: 'ch.interlis', name: 'iox-api', version: '1.0.4'
     compile group: 'ch.interlis', name: 'iox-ili', version: '1.24.1+'
-    compile group: 'ch.interlis', name: 'ili2c-tool', version: "5.6.4"
-    compile group: 'ch.interlis', name: 'ili2c-core', version: "5.6.4"
+    compile group: 'ch.interlis', name: 'ili2c-tool', version: "5.6.5+"
+    compile group: 'ch.interlis', name: 'ili2c-core', version: "5.6.5+"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     deployerJars "org.apache.maven.wagon:wagon-ftp:3.3.3"
     deployerJars "org.apache.maven.wagon:wagon-ssh:3.3.3"
