@@ -2,7 +2,9 @@ ilivalidator 1.14.8 (2025-07-xx)
 --------------------------------
 - Validator: show basket end state and/or source file version/md5
 - Validator: ILI2.3 fix validation of a repeated attribute (#446)
+- Validator: support data files with http/https URL
 - iox-ili-1.24.1+
+- ili2c-5.6.5+
 
 
 ilivalidator 1.14.7 (2025-05-07)
